# Retail-Manufacturing-Simple

./: README.md  pyproject.toml
retail_manufacturing_simple/: hooks.py  modules.txt
retail_manufacturing_simple/fixtures/: workspace.json
